--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                         <br>
                         <a href="https://rickieeerl.github.io/ouderavondwebsite/">Rickjan van Wendel</a>
                         <br>
-                        <a href="">Bart Jan Wijnsma</a>
+                        <a href="websiteOuderavond (bartjanw.github.io)">Bart Jan Wijnsma</a>
                         <br>
                         <a href="https://rikohboyo.github.io/OuderAvondKampen/">Rik Wisse</a>
                        </p>
