--- a/index.html
+++ b/index.html
@@ -488,13 +488,13 @@
                        <p>
                         <a href="https://niklashoefnagel.github.io/ouderavondkampen/">Niklas Hoefnagel</a> 
                         <br>                 
-                        <a href="ProjectwebsiteOuderavond (lukas-schaak.github.io)">Lukas Schaak</a>
+                        <a href="https://lukas-schaak.github.io/ProjectwebsiteOuderavond/">Lukas Schaak</a>
                         <br>
-                        <a href="OuderavondProject (thijsvos123.github.io)">Thijs Vos</a>
+                        <a href="https://thijsvos123.github.io/OuderavondProject/index.html">Thijs Vos</a>
                         <br>
                         <a href="https://rickieeerl.github.io/ouderavondwebsite/">Rickjan van Wendel</a>
                         <br>
-                        <a href="websiteOuderavond (bartjanw.github.io)">Bart Jan Wijnsma</a>
+                        <a href="https://bartjanw.github.io/websiteOuderavond/">Bart Jan Wijnsma</a>
                         <br>
                         <a href="https://rikohboyo.github.io/OuderAvondKampen/">Rik Wisse</a>
                        </p>
