--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
                         <br>
                         <a href="https://thijsvos123.github.io/OuderavondProject/index.html">Thijs Vos</a>
                         <br>
-                        <a href="https://rickieeerl.github.io/ouderavondwebsite/">Rickjan van Wendel</a>
+                        <a href="https://rickieeerl.github.io/html/">Rickjan van Wendel</a>
                         <br>
                         <a href="https://671604c911f2d.site123.me/">Bart Jan Wijnsma</a>
                         <br>
